--- a/movie-website-master/index_user.html
+++ b/movie-website-master/index_user.html
@@ -16,7 +16,7 @@
     <div class="navbar">
         <div class="navbar-container">
             <div class="logo-container">
-                <h1 class="logo">UWaNtbEAasShOLe</h1>
+                <h1 class="logo">SASIMI</h1>
             </div>
             <div class="menu-container">
                 <ul class="menu-list">
@@ -44,9 +44,11 @@
             </div>
         </div>
     </div>
+    <!---
     <div class="sidebar">
         <button class="search-button"><i class="left-menu-icon fas fa-search"></i></button>
     </div>
+-->
     <div class="container">
         <div class="content-container">
             <div class="featured-content"
